--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 }
 
 .container input{
-    margin: 10px;
+    margin-right: 10px;
     border-radius: 30px;
     padding: 20px;
     font-size: 18px;
@@ -57,8 +57,10 @@
 }
 
 .container{
-    text-align: center;
     margin: 50px 0px 0px 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .container button:hover{
@@ -108,6 +110,7 @@
 }
 
 /* Media queries*/
+
 /* Mobile screen */
 @media screen and (max-width:320px) {
     .container input{
